# fvm_3d

./: .clangd  .gitignore  ADVANCED_MHD_IMPLEMENTATION_COMPLETE.md  BENCHMARKS.md  CMakeLists.txt  COMPARISON_SUMMARY.txt  COMPLETION_REPORT.txt  ENERGY_FORMULA_COMPARISON.md  FVM3D_COMPLETION_SUMMARY.md  HLLD_COMPLETENESS_IMPROVEMENTS.md  HLLD_IMPLEMENTATION_STATUS.md  HLLD_LATEST_ANALYSIS.md  HLLD_OPENMHD_COMPARISON.md  HLLD_OPENMHD_EQUIVALENCE.md  HLLD_TESTING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_FINAL_SUMMARY.md  MHD_MPI_IMPLEMENTATION_PROGRESS.md  MHD_STABILITY_NOTES.md  MISSING_FEATURES_IMPLEMENTATION_SUMMARY.md  MODIFICATION_SUMMARY.md  MPI_PARALLEL_IMPLEMENTATION_COMPLETE.md  QUICK_RUN.sh  README.md  README_FVM3D.md  README_VISUALIZATION.md  ROTATE_FUNCTION_ANALYSIS.md  RUN_3D_RECONNECTION.md  SESSION_COMPLETION_REPORT.md  TEST_ANALYSIS_REPORT.md  TROUBLESHOOTING.md  VECTORIZATION_NOTES.md  VECTORIZATION_STATUS.md  VERIFICATION_GUIDE.md  check_vtk.py  simple_vtk_viewer.py  visualize_blast_wave.py  visualize_vtk.py
.cache/clangd/index/: blast_wave_3d.cpp.245BDB7B19EE5CD5.idx  blast_wave_simulation.cpp.72E35633E448BF8A.idx  boundary_condition.hpp.F5E4AF8DEB0BF117.idx  checkpoint_restart_example.cpp.2F3F3C11D443F692.idx  euler3d.cpp.ABBE1DECC9935E45.idx  euler3d.hpp.AAC15F30D0944E7C.idx  field3d.hpp.AC89BA045A28D08E.idx  forward_euler.cpp.1A150566C6209BC0.idx  forward_euler.hpp.B12005EF21AA4D61.idx  fvm_solver3d.cpp.CAF0A2C08A0DCFDB.idx  fvm_solver3d.hpp.B2DB333A38DD17A7.idx  grid3d.cpp.03A1540D38BD3B84.idx  grid3d.hpp.1AD7B7790ED4AB03.idx  harris_sheet_3d.cpp.49475033A131987F.idx  hdf5_checkpoint.cpp.8DE4D5DF45241098.idx  hdf5_checkpoint.hpp.9A0E3A2D82AAD1A1.idx  mpi_blast_wave_3d.cpp.1EB8FA632F029E59.idx  mpi_domain_decomposer.cpp.C3ADC2A515A54B11.idx  mpi_domain_decomposer.hpp.92693BFE31E4B55B.idx  mpi_fvm_solver3d.cpp.AFD91AEF87C97EAE.idx  mpi_fvm_solver3d.hpp.AEBF6C4D743D9FD5.idx  mpi_global_reduction.cpp.05E14F2BCBD7AF6E.idx  mpi_global_reduction.hpp.3C55A0F34544823F.idx  mpi_halo_exchange.cpp.DAD0F44CAF4A156C.idx  mpi_halo_exchange.hpp.D17A33EF37589C07.idx  mpi_hdf5_checkpoint.cpp.E385B080AC6A592E.idx  mpi_hdf5_checkpoint.hpp.20124FA7CFE4C8E2.idx  mpi_magnetic_reconnection.cpp.6619CDE5FFDFC2E9.idx  mpi_utils.cpp.91A8EE11098C32C0.idx  mpi_utils.hpp.E3EE9A73E8F35217.idx  parallel_vtk_writer.cpp.040BF95568F082FA.idx  (+35 more)
docs/: 3D_CPP_Core_Modules_Implementation.md  3D_CPP_Framework_Design.md  3D_CPP_Implementation_Guide.md  AdvancedResistiveMHD_Implementation.md  BasicVsAdvancedMHD.md  FLUX_RECONSTRUCTION_ARCHITECTURE.md  Phase4_GlobalReduction_Implementation.md  QUICKSTART_AdvancedMHD.md
examples/: blast_wave_3d.cpp  blast_wave_simulation.cpp  brio_wu_shock_tube.cpp  checkpoint_restart_example.cpp  harris_sheet_3d.cpp  harris_sheet_fvm.cpp  mpi_blast_wave_3d.cpp  mpi_magnetic_reconnection.cpp  mpi_vtk_visualization_example.cpp  orszag_tang_vortex.cpp  test_hdf5_checkpoint.cpp  vtk_visualization_example.cpp
include/boundary/: boundary_condition.hpp  periodic_bc.hpp  reflective_bc.hpp  transmissive_bc.hpp
include/core/: field3d.hpp  fvm_solver3d.hpp  fvm_solver_base.hpp  grid3d.hpp  mpi_fvm_solver3d.hpp
include/io/: hdf5_checkpoint.hpp  hdf5_utils.hpp  mpi_hdf5_checkpoint.hpp  parallel_vtk_writer.hpp  vtk_physics_helper.hpp  vtk_writer.hpp
include/parallel/: mpi_domain_decomposer.hpp  mpi_global_reduction.hpp  mpi_halo_exchange.hpp  mpi_utils.hpp
include/physics/: euler3d.hpp  mhd_base.hpp  physics_base.hpp  physics_factory.hpp  resistive_mhd3d.hpp  resistive_mhd3d_advanced.hpp
include/spatial/: reconstruction.hpp  riemann_hll.hpp  riemann_hllc.hpp  riemann_hlld.hpp  riemann_laxfriedrichs.hpp  riemann_solver_factory.hpp
include/temporal/: forward_euler.hpp  rk_integrators.hpp  time_integrator.hpp  time_integrator_factory.hpp
src/boundary/: periodic_bc.cpp  reflective_bc.cpp  transmissive_bc.cpp
src/core/: fvm_solver3d.cpp  fvm_solver_base.cpp  grid3d.cpp  mpi_fvm_solver3d.cpp
src/io/: hdf5_checkpoint.cpp  hdf5_utils.cpp  mpi_hdf5_checkpoint.cpp  parallel_vtk_writer.cpp  vtk_physics_helper.cpp  vtk_writer.cpp
src/parallel/: mpi_domain_decomposer.cpp  mpi_global_reduction.cpp  mpi_halo_exchange.cpp  mpi_utils.cpp
src/physics/: euler3d.cpp  resistive_mhd3d.cpp  resistive_mhd3d_advanced.cpp
src/spatial/: reconstruction.cpp  riemann_hll.cpp  riemann_hllc.cpp  riemann_hlld.cpp  riemann_laxfriedrichs.cpp  riemann_solver_factory.cpp
src/temporal/: forward_euler.cpp  rk_integrators.cpp  time_integrator_factory.cpp
(+29 files in other folders)
